<resources>
    <string name="app_name">ListAdapter Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="additembutton">Add Assignment</string>
    <string name="timerbutton">Study Now!</string>
    <string name="action_settings">Settings</string>

    <!-- add AssignmentActivity -->

    <!-- Title -->
    <string name="assignment_title">Assignment Title</string>
    <string name="assignment_title_hint">Enter Assignment</string>


    <!-- Date -->
    <string name="duedate"> Due Date</string>
    <string name="duetext">Due: </string>
    <string name="defaultdate"> 00-00-0000</string>
    <string name="button_date">Choose Date</string>

    <!-- Reminder -->
    <string name="remindertitle">Reminder Date</string>
    <string name="remindertext"> Start reminding me on:</string>
    <string name="reminderdate">00-00-0000</string>
    <string name="reminderbutton">Choose Reminder </string>


    <!-- Status -->
    <string name="statustitle">Status</string>
    <string name="status_notfinished">Not Finsihed</string>
    <string name="status_finished">Finished</string>


    <!-- Buttons -->
    <string name="cancelbutton">Cancel</string>
    <string name="submitbutton">Submit</string>



    <!-- assignment_item.xml     //used in AssignmentAdapter -->
    <string name="duedatetitle">Due:  </string>
    <string name="finishedStatus">Finished:  </string>
    <string name="item_button">Start Assignment</string>





</resources>
