<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/assignment_adapater_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adapter_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="99 PROBLEMS"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/adapter_dueDatetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adapter_item_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignBaseline="@+id/adapter_dueDate"

        android:text="@string/duedatetitle"
        />
    <TextView
        android:id="@+id/adapter_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/adapter_dueDatetitle"
        android:text = "00-00-000"/>


    <TextView
        android:id="@+id/adapter_finishStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/adapter_dueDate"
        android:layout_toLeftOf="@+id/adapter_finish_checkbox"
        android:layout_marginRight="30dp"
        android:text="@string/finishedStatus"/>
    <CheckBox
        android:id="@+id/adapter_finish_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/adapter_dueDate"
        android:layout_alignParentRight="true"
        android:checked="false"/>
    <Button
        android:id="@+id/adapater_timerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/item_button"
        />

</RelativeLayout>